testsuite/tests/grammar/two_roots/test.out
== test.lkt ==
test.lkt:8:1: error: There can be only one root node (OtherNode)
8 | class FooNode implements Node[FooNode] {
  | ^


lkt_compile: Done
